live project setup

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <title>Understanding typescript</title>
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    gyuyt
+  </body>
 </html>
